fixed name display and student ID

--- a/24038714-CSCT code.ipynb
+++ b/24038714-CSCT code.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 24038714\n",
-    "- Koshaliya Shanmugathasan"
+    "**Koshaliya Shanmugathasan**  \n",
+    "Student ID: 24038714"
    ]
   },
   {
